Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectUndefined.quorum
class Main
    action Main
        Object obj
        obj = cast(Object, undefined)
        if obj = undefined
            output "passed"
        end
    end
end