Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumberUndefinedField.quorum
class Main
    number num = 0.0
    action Main
        num = cast(number, undefined)
    end
end
